--- a/pages/3586.html
+++ b/pages/3586.html
@@ -452,7 +452,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#Idea'>Idea</a></li><li><a href='#overview'>Overview</a></li><li><a href='#in_perturbative_quantum_field_theory'>In perturbative quantum field theory</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='Idea'>Idea</h2>
 
-<p>In the original sense, <em>microlocal analysis</em> (e.g. <a href='#Strohmaier09'>Strohmaier 09</a>) is the study of the <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> of <a class='existingWikiWord' href='/nlab/show/distribution'>generalized functions</a>/<a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a> with attention paid not just to their <a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support</a>, i.e. to the points around which they are singular as generalized functions, but also the directions of <a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of their singularities</a> at each singular point, which is the set of <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>covectors</a> known as their <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>. This extra directional (“microlocal”) information governs the basic operations on distributions, notably the <a class='existingWikiWord' href='/nlab/show/pullback+of+a+distribution'>pullback of distributions</a> and the <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>.</p>
+<p>In the original sense, <em>microlocal analysis</em> (e.g. <a href='#Strohmaier09'>Strohmaier 09</a>) is the study of the <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> of <a class='existingWikiWord' href='/nlab/show/generalized+function'>generalized functions</a>/<a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a> with attention paid not just to their <a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>singular support</a>, i.e. to the points around which they are singular as generalized functions, but also the directions of <a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of their singularities</a> at each singular point, which is the set of <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>covectors</a> known as their <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a>. This extra directional (“microlocal”) information governs the basic operations on distributions, notably the <a class='existingWikiWord' href='/nlab/show/pullback+of+a+distribution'>pullback of distributions</a> and the <a class='existingWikiWord' href='/nlab/show/product+of+distributions'>product of distributions</a>.</p>
 
 <p>Since the wave front set is the set of (co-)directions along which, locally, the <a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of distributions</a> is not rapidly decreasing (the set of “<a class='existingWikiWord' href='/nlab/show/ultraviolet+divergence'>UV divergences</a>” in applications to <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>), much of microlocal analysis is concerned with constructions related to Fourier transformation, such as the discussion of <a class='existingWikiWord' href='/nlab/show/pseudodifferential+operator'>pseudodifferential operators</a>.</p>
 
@@ -485,6 +485,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/propagation+of+singularities+theorem'>propagation of singularities theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microformal+morphism'>microformal morphism</a></p>
 </li>
 </ul>
 
@@ -555,14 +559,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 07:20:33 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  Revised on December  7, 2017 08:03:02 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/microlocal+analysis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/microlocal+analysis/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/microlocal+analysis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/microlocal+analysis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/microlocal+analysis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/microlocal+analysis/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/microlocal+analysis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/microlocal+analysis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
