--- a/pages/5417.html
+++ b/pages/5417.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_47bd6e5eca7fb9631c5944aa8e15e78f509e599a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>E \to X</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a>, its <strong>zero section</strong> is the <a class='existingWikiWord' href='/nlab/show/section'>section</a> <math class='maruku-mathml' display='inline' id='mathml_47bd6e5eca7fb9631c5944aa8e15e78f509e599a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>→</mo><mi>E</mi></mrow><annotation encoding='application/x-tex'>X \to E</annotation></semantics></math> that sends every point to the 0-vector over it.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_42aa06c2f1466d6c352fa35f37cd7ba1142f3c12_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>E \to X</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a>, its <strong>zero section</strong> is the <a class='existingWikiWord' href='/nlab/show/section'>section</a> <math class='maruku-mathml' display='inline' id='mathml_42aa06c2f1466d6c352fa35f37cd7ba1142f3c12_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>→</mo><mi>E</mi></mrow><annotation encoding='application/x-tex'>X \to E</annotation></semantics></math> that sends every point to the 0-vector over it.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -328,6 +328,14 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/projective+bundle'>projective bundle</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/zero+locus'>vanishing locus</a>, <a class='existingWikiWord' href='/nlab/show/critical+point'>critical locus</a>, <a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/H%C3%B6rmander%27s+criterion'>Hörmander&#39;s criterion</a> on <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front set</a></p>
+</li>
 </ul>
 
 <p>
@@ -339,14 +347,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 28, 2017 08:15:21 
+  Revised on December  8, 2017 05:03:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  (188.96.255.201)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/zero+section" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero+section/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/zero+section" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero+section" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/zero+section" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero+section/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/zero+section" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero+section" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
