--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,194 +308,22 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='tests_for_itex_accents'>tests for iTex accents</h2>
+    <div class='num_example'>
+<h6 id='example'>Example</h6>
 
-<p>see: <a href='https://nforum.ncatlab.org/discussion/8087/feynman-slash-notation'>nforum: feynman-slash-notation</a></p>
-
-<p>Toby:</p>
-
-<blockquote>
-<p>I currently have an example sitting in the <a class='existingWikiWord' href='/nlab/show/Sandbox'>Sandbox</a>.</p>
-</blockquote>
-
-<p>If you link to the sandbox for your slash example you should give a version number, i.e. <a href='https://ncatlab.org/nlab/revision/Sandbox/1328'>Sandbox/1328</a>.</p>
-
-<blockquote>
-<p>I don’t know why it doesn’t work on the Forum</p>
-</blockquote>
-
-<p>I decided to test all the accents listed at <a href='https://golem.ph.utexas.edu/~distler/blog/itex2MMLcommands.html#itex2MMLAccents'>https://golem.ph.utexas.edu/~distler/blog/itex2MMLcommands.html#itex2MMLAccents</a></p>
-
-<p>\bar, \overline ( = \closure = \widebar), \underline, \vec, \widevec( = \overrightarrow), \overleftarrow, \dot, \ddot, \dddot, \ddddot, \tilde, \widetilde, \check, \widecheck, \hat, \widehat, \slash, \boxed</p>
-
-<ul>
-<li>
-<p><code>a\bar{A}b\bar{BBB}c\bar{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo stretchy='false'>¯</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo stretchy='false'>¯</mo></mover><mi>c</mi><mover><mo>∂</mo><mo stretchy='false'>¯</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\bar{A}b\bar{BBB}c\bar{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\overline{A}b\overline{BBB}c\overline{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>¯</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>¯</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>¯</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\overline{A}b\overline{BBB}c\overline{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\underline{A}b\underline{BBB}c\underline{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><munder><mi>A</mi><mo>̲</mo></munder><mi>b</mi><munder><mi>BBB</mi><mo>̲</mo></munder><mi>c</mi><munder><mo>∂</mo><mo>̲</mo></munder><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\underline{A}b\underline{BBB}c\underline{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\vec{A}b\vec{BBB}c\vec{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo stretchy='false'>→</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo stretchy='false'>→</mo></mover><mi>c</mi><mover><mo>∂</mo><mo stretchy='false'>→</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\vec{A}b\vec{BBB}c\vec{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\widevec{A}b\widevec{BBB}c\widevec{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>→</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>→</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>→</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\widevec{A}b\widevec{BBB}c\widevec{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\overleftarrow{A}b\overleftarrow{BBB}c\overleftarrow{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>←</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>←</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>←</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\overleftarrow{A}b\overleftarrow{BBB}c\overleftarrow{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\dot{A}b\dot{BBB}c\dot{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>˙</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>˙</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>˙</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\dot{A}b\dot{BBB}c\dot{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\ddot{A}b\ddot{BBB}c\ddot{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>¨</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>¨</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>¨</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\ddot{A}b\ddot{BBB}c\ddot{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\dddot{A}b\dddot{BBB}c\dddot{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>⃛</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>⃛</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>⃛</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\dddot{A}b\dddot{BBB}c\dddot{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\ddddot{A}b\ddddot{BBB}c\ddddot{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>⃜</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>⃜</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>⃜</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\ddddot{A}b\ddddot{BBB}c\ddddot{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\tilde{A}b\tilde{BBB}c\tilde{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo stretchy='false'>˜</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo stretchy='false'>˜</mo></mover><mi>c</mi><mover><mo>∂</mo><mo stretchy='false'>˜</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\tilde{A}b\tilde{BBB}c\tilde{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\widetilde{A}b\widetilde{BBB}c\widetilde{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>˜</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>˜</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>˜</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\widetilde{A}b\widetilde{BBB}c\widetilde{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\check{A}b\check{BBB}c\check{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo stretchy='false'>ˇ</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo stretchy='false'>ˇ</mo></mover><mi>c</mi><mover><mo>∂</mo><mo stretchy='false'>ˇ</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\check{A}b\check{BBB}c\check{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\widecheck{A}b\widecheck{BBB}c\widecheck{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>ˇ</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>ˇ</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>ˇ</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\widecheck{A}b\widecheck{BBB}c\widecheck{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\hat{A}b\hat{BBB}c\hat{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo stretchy='false'>^</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo stretchy='false'>^</mo></mover><mi>c</mi><mover><mo>∂</mo><mo stretchy='false'>^</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\hat{A}b\hat{BBB}c\hat{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\widehat{A}b\widehat{BBB}c\widehat{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mover><mi>A</mi><mo>^</mo></mover><mi>b</mi><mover><mi>BBB</mi><mo>^</mo></mover><mi>c</mi><mover><mo>∂</mo><mo>^</mo></mover><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\widehat{A}b\widehat{BBB}c\widehat{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\slash{A}b\slash{BBB}c\slash{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><menclose notation='updiagonalstrike'><mi>A</mi></menclose><mi>b</mi><menclose notation='updiagonalstrike'><mi>BBB</mi></menclose><mi>c</mi><menclose notation='updiagonalstrike'><mo>∂</mo></menclose><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\slash{A}b\slash{BBB}c\slash{\partial}d</annotation></semantics></math></p>
-</li>
-
-<li>
-<p><code>a\boxed{A}b\boxed{BBB}c\boxed{\partial}d</code></p>
-</li>
-
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><menclose notation='box'><mi>A</mi></menclose><mi>b</mi><menclose notation='box'><mi>BBB</mi></menclose><mi>c</mi><menclose notation='box'><mo>∂</mo></menclose><mi>d</mi></mrow><annotation encoding='application/x-tex'>a\boxed{A}b\boxed{BBB}c\boxed{\partial}d</annotation></semantics></math></p>
-</li>
-</ul>
-
-<p>In the nForum <code>\overleftarrow</code> is unknown while <code>\slash</code> and <code>boxed</code> silently eat their arguments. In nLab all of these work.</p>
-
-<p>NOTE however that some extra white space sometimes appears between letters.</p>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
-
-<p><math class='maruku-mathml' display='inline' id='mathml_d7ca21785c59e80af8e5e88c9d2c29932e79d749_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p>xxx</p>
+</div>
 </div>
 
 <div class="revisedby">
-  Revised on December  8, 2017 07:00:03 
+  Revised on December  9, 2017 05:44:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.96.255.201)
+  (188.96.254.153)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1333" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1333 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1334" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1334 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
