--- a/pages/18334.html
+++ b/pages/18334.html
@@ -648,7 +648,7 @@ margin-left: 0em;
 
 <h2 id='References'>References</h2>
 
-<p>For review see</p>
+<p>For review and exposition see</p>
 
 <ul>
 <li id='Schenkel17'>
@@ -657,6 +657,10 @@ margin-left: 0em;
 
 <li id='Schenkel14'>
 <p><a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <em>On the problem of gauge theories in locally covariant QFT</em>, talk at <em><a href='http://www.science.unitn.it/~moretti/convegno/convegno.html'>Operator and Geometric Analysis on Quantum Theory</a></em> Trento, 2014 (<a class='existingWikiWord' href='/nlab/files/SchenkelTrento2014.pdf' title='pdf'>pdf</a>) (with further emphasis on this point in the companion talk <a href='field+bundle#Schreiber14'>Schreiber 14</a>)</p>
+</li>
+
+<li id='Schenkel17b'>
+<p><a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <em>From Fredenhagen’s universal algebra to homotopy theory and operads</em>, talk at <em>Quantum Physics meets Mathematics</em>, Hamburg, December 2017 (<a href='http://aschenkel.eu/Hamburg17.pdf'>pdf slides</a>)</p>
 </li>
 </ul>
 
@@ -674,6 +678,10 @@ margin-left: 0em;
 <li id='BeniniSchenkel16'>
 <p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <em>Quantum field theories on categories fibered in groupoids</em>, Communications in Mathematical Physics November 2017, Volume 356, Issue 1, pp 19–64 (<a href='https://arxiv.org/abs/1610.06071'>arXiv:1610.06071</a>)</p>
 </li>
+
+<li id='BeniniSchenkelWoike17'>
+<p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <span class='newWikiWord'>Lukas Woike<a href='/nlab/new/Lukas+Woike'>?</a></span>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</p>
+</li>
 </ul>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/stack'>stack</a> of <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge fields</a> is discussed in</p>
@@ -690,14 +698,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 19, 2017 06:21:44 
+  Revised on December  9, 2017 10:57:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  (185.46.137.19)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
